--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "author": "Matheus Oliveira <matheusalmeida.soliveira@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon app.js",
     "migrate-teste": "set NODE_ENV=test&&yarn knex migrate:latest",
-    "test-jest": "set NODE_ENV=test&&jest"
+    "test-jest": "set NODE_ENV=test&&jest --detectOpenHandles"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -18,8 +18,15 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "@sucrase/jest-plugin": "^2.0.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
-    "sucrase": "^3.16.0"
+    "sucrase": "^3.16.0",
+    "supertest": "^6.0.1"
+  },
+  "jest": {
+    "transform": {
+      ".(js|jsx|ts|tsx)": "@sucrase/jest-plugin"
+    }
   }
 }
